--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Unsent Project Clone{% endblock %}</title>
+    <title>{% block title %}Unsaid{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('submit_message') }}">Submit Message</a></li>
+                <li><a href="{{ url_for('submit_message') }}">Submit</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
             </ul>
         </nav>
